--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = 
+	extra_envs.ini
+
 [env:lolin_c3_mini]
 platform = espressif32
 board = lolin_c3_mini
@@ -21,9 +25,7 @@ lib_deps =
 	https://github.com/GuLinux/WiFiManager.git#v0.0.2
 	https://github.com/GuLinux/ArduinoOTA-Manager.git#v0.0.1
     mathertel/OneButton@^2.6.1
-    adafruit/Adafruit SSD1306@^2.5.11
-    adafruit/Adafruit GFX Library @ ^1.11.10
-	adafruit/Adafruit BusIO @ ^1.16.1
+	olikraus/U8g2@^2.36.2
 
 board_build.filesystem = littlefs
 
