Introduce custom settings; add skeleton INDI nav item

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,16 +12,16 @@
 extra_configs = 
 	extra_envs.ini
 
-[env:lolin_c3_mini]
+[env]
 platform = espressif32
-board = lolin_c3_mini
+
 framework = arduino
 lib_deps = 
     jsc/ArduinoLog@^1.2.1
     https://github.com/mathieucarbou/AsyncTCP.git#v3.2.4
 	https://github.com/mathieucarbou/ESPAsyncWebServer.git#v3.1.5
 	https://github.com/GuLinux/AsyncBufferedTcpLogger#v0.0.3
-	https://github.com/GuLinux/AsyncWebserverUtils#v0.0.2
+	https://github.com/GuLinux/AsyncWebserverUtils#v0.0.3
 	https://github.com/GuLinux/WiFiManager.git#v0.0.2
 	https://github.com/GuLinux/ArduinoOTA-Manager.git#v0.0.1
     mathertel/OneButton@^2.6.1
@@ -46,3 +46,6 @@ monitor_filters =
 monitor_speed = 115200
 
 
+
+[env:lolin_c3_mini]
+board = lolin_c3_mini
