--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ extra_configs =
 	extra_envs.ini
 
 [env]
-platform = espressif32
+test_framework = googletest
 
-framework = arduino
+
 lib_deps = 
     jsc/ArduinoLog@^1.2.1
     https://github.com/mathieucarbou/AsyncTCP.git#v3.2.4
@@ -45,7 +45,23 @@ monitor_filters =
 
 monitor_speed = 115200
 
+[env:native]
+; framework = 
+platform = native
+build_src_filter = +<protocols/indi/indiparse.cpp>
+test_build_src = yes
+; test_filter = protocols/test_indi/*
 
 
 [env:lolin_c3_mini]
+platform = espressif32
+framework = arduino
 board = lolin_c3_mini
+
+[env:simulator]
+framework = arduino
+platform = espressif32
+board = esp32-c3-devkitm-1
+build_flags = 
+	${env.build_flags}	
+	-DCONFIG_SIMULATOR
