Export config via json

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ data
 .vscode/launch.json
 .vscode/ipch
 src/configuration_custom.h
+src/hardware/pinout_custom.h
 logs
 data/wifi.json
 extra_envs.ini
