--- a/platformio.ini
+++ b/platformio.ini
@@ -21,9 +21,11 @@ lib_deps =
     https://github.com/mathieucarbou/AsyncTCP.git#v3.2.4
 	https://github.com/mathieucarbou/ESPAsyncWebServer.git#v3.1.5
 	https://github.com/GuLinux/AsyncBufferedTcpLogger#v0.0.3
-	https://github.com/GuLinux/AsyncWebserverUtils#v0.0.3
-	https://github.com/GuLinux/WiFiManager.git#v0.0.2
+	https://github.com/GuLinux/AsyncWebserverUtils#v0.0.5
+	https://github.com/GuLinux/WiFiManager.git#v0.0.3
 	https://github.com/GuLinux/ArduinoOTA-Manager.git#v0.0.1
+	ayushsharma82/ElegantOTA@^3.1.6
+	bblanchon/ArduinoJson@^7.2.0
     mathertel/OneButton@^2.6.1
 	olikraus/U8g2@^2.36.2
 
@@ -48,7 +50,7 @@ monitor_speed = 115200
 [env:native]
 ; framework = 
 platform = native
-build_src_filter = +<protocols/indi/indiparse.cpp>
+build_src_filter = +<protocols/indi/indiparser.cpp>
 test_build_src = yes
 ; test_filter = protocols/test_indi/*
 
@@ -62,6 +64,7 @@ board = lolin_c3_mini
 framework = arduino
 platform = espressif32
 board = esp32-c3-devkitm-1
+board_build.flash_mode = dio
 build_flags = 
 	${env.build_flags}	
 	-DCONFIG_SIMULATOR
