Add INDI Device interface

--- a/platformio.ini
+++ b/platformio.ini
@@ -52,7 +52,8 @@ monitor_speed = 115200
 platform = native
 build_src_filter = +<protocols/indi/indiparser.cpp>
 test_build_src = yes
-; test_filter = protocols/test_indi/*
+; test_filter = 
+; 	protocols\/test_indi\/*
 
 
 [env:lolin_c3_mini]
