--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ build_flags =
 	-std=c++2a
 	-std=gnu++2a
 	-D_TASK_STD_FUNCTION
+	-DPUGIXML_NO_EXCEPTIONS
 build_unflags = 
 	-std=gnu++11
 	-std=cpp++11
