Use pugixml for parsing INDI; parse line by line for better performances

--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ build_flags =
 	-std=gnu++2a
 	-D_TASK_STD_FUNCTION
 	-DPUGIXML_NO_EXCEPTIONS
+	-DPUGIXML_NO_STL
 build_unflags = 
 	-std=gnu++11
 	-std=cpp++11
